chore(ui): add shadcn components, liquid glass header, mobile radial settings; feat(i18n): localized nav labels; feat(ux): add pacer utils with debounce/throttle/rate-limit and apply to toggles; style: align borders/rings and separators; fix: async header + theme animation guards

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ JWT_SECRET=
 
 # Public
 NEXT_PUBLIC_API_URL=
-NEXT_PUBLIC_APP_NAME=Darius Pizza
+NEXT_PUBLIC_APP_NAME=Alexy Roman
 
 # Supabase
 SUPABASE_URL=
