--- a/package.json
+++ b/package.json
@@ -35,13 +35,19 @@
     "fix": "eslint --fix src tests && npm run format"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/pacer": "^0.15.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "0.544.0",
     "next": "15.5.3",
     "next-intl": "^4.3.12",
     "next-themes": "0.4.6",
     "react": "19.1.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.1.1",
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7",
@@ -61,6 +67,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "audit-ci": "^7.1.0",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.3",
