--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "19.1.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.1.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "4.1.7",
