--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ JWT_SECRET=
 
 # Public
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=Alexy Roman
 
 # Supabase
