--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+
+NEXT_PUBLIC_ENABLE_ITEM_CTA=false
