--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ UPSTASH_REDIS_REST_TOKEN=
 
 NEXT_PUBLIC_ENABLE_ITEM_CTA=false
 NEXT_PUBLIC_CURRENCY=€
+
+# Instagram Basic Display API
+INSTAGRAM_ACCESS_TOKEN=
