--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "framer-motion": "^12.23.24",
-    "lucide-react": "0.544.0",
+    "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "next": "15.5.3",
     "next-intl": "^4.3.12",
     "next-themes": "0.4.6",
