--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ NEXT_PUBLIC_CURRENCY=€
 
 # Instagram Basic Display API
 INSTAGRAM_ACCESS_TOKEN=
+
+# Google Analytics and Tag Manager
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_ANALYTICS_DEBUG=true
