--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -54,6 +55,7 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "framer-motion": "^12.23.24",
+    "gtag": "^1.0.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
     "next": "15.5.3",
