feat: complete french content

--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,19 @@ INSTAGRAM_ACCESS_TOKEN=
 # Google Analytics and Tag Manager
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-NEXT_PUBLIC_ANALYTICS_DEBUG=true
+NEXT_PUBLIC_ANALYTICS_DEBUG=false
+
+# OpenGraph
+
+# Social Media
+TWITTER_SITE=@dariuspizza
+TWITTER_CREATOR=@dariuspizza
+FACEBOOK_APP_ID=your_facebook_app_id
+FACEBOOK_ADMINS=your_facebook_admin_ids
+FACEBOOK_DOMAIN_VERIFICATION=your_facebook_domain_verification_code
+LINKEDIN_AUTHOR=Darius Pizza
+
+# Search Engine Verification
+GOOGLE_SITE_VERIFICATION=your_google_verification_code
+YANDEX_VERIFICATION=your_yandex_verification_code
+YAHOO_VERIFICATION=your_yahoo_verification_code
