--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:coverage": "jest --coverage",
     "test:e2e": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test",
     "test:e2e:safari": "node -e \"process.exit(process.env.CI?0:1)\" || cross-env E2E_ALL_BROWSERS=0 playwright test",
-    "test:e2e:all": "node -e \"process.exit(process.env.CI?0:1)\" || cross-env E2E_ALL_BROWSERS=1 playwright test",
+    "test:og": "node scripts/test-og.js",
+    "test:og:en": "node scripts/test-og.js http://localhost:3000/en",
+    "test:og:fr": "node scripts/test-og.js http://localhost:3000/fr",
+    "test:og:de": "node scripts/test-og.js http://localhost:3000/de",
+    "test:og:it": "node scripts/test-og.js http://localhost:3000/it",
+    "test:og:es": "node scripts/test-og.js http://localhost:3000/es",
     "test:e2e:ui": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --ui",
     "test:e2e:headed": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --headed",
     "test:e2e:debug": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --debug",
