--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,9 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Turnstile
-NEXT_PUBLIC_TURNSTILE_SITE_KEY=
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+# Turnstile (optional - spam protection)
+TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
 
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
@@ -46,3 +48,8 @@ LINKEDIN_AUTHOR=Darius Pizza
 GOOGLE_SITE_VERIFICATION=your_google_verification_code
 YANDEX_VERIFICATION=your_yandex_verification_code
 YAHOO_VERIFICATION=your_yahoo_verification_code
+
+# Resend Email Configuration
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=noreply@yourdomain.com
+RESEND_TO_EMAIL=contact@yourdomain.com
