--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@next/third-parties": "^16.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -71,6 +72,8 @@
     "react-dom": "19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.2.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "^4.1.12",
