--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/jest-dom": "^6.8.0",
@@ -91,6 +92,7 @@
     "@types/node": "^20.19.21",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
     "audit-ci": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
