--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@marsidev/react-turnstile": "^1.3.1",
     "@next/third-parties": "^16.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
