fix: call cta on phone

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ YAHOO_VERIFICATION=your_yahoo_verification_code
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=noreply@yourdomain.com
 RESEND_TO_EMAIL=contact@yourdomain.com
+
+SITE_PHONE=
