--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "gtag": "^1.0.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
-    "next": "15.5.9",
+    "next": "^15.5.11",
     "next-intl": "^4.3.12",
     "next-themes": "0.4.6",
     "react": "19.1.1",
