feat: begin dashboard creation

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
 # Turnstile (optional - spam protection)
 TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
 
-# Upstash Redis
+# Upstash Redis (required for editable opening hours on Vercel)
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
@@ -43,6 +43,9 @@ FACEBOOK_APP_ID=your_facebook_app_id
 FACEBOOK_ADMINS=your_facebook_admin_ids
 FACEBOOK_DOMAIN_VERIFICATION=your_facebook_domain_verification_code
 LINKEDIN_AUTHOR=Darius Pizza
+
+# Protected routes (dashboard, etc.)
+PAGE_ACCESS_PASSWORD=
 
 # Search Engine Verification
 GOOGLE_SITE_VERIFICATION=your_google_verification_code
