--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tanstack/pacer": "^0.15.4",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@upstash/redis": "^1.36.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
