feat: username and sidebar ui phone

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ FACEBOOK_DOMAIN_VERIFICATION=your_facebook_domain_verification_code
 LINKEDIN_AUTHOR=Darius Pizza
 
 # Protected routes (dashboard, etc.)
+PAGE_ACCESS_USERNAME=
 PAGE_ACCESS_PASSWORD=
 
 # Search Engine Verification
