feat: google business api integration

--- a/.env.example
+++ b/.env.example
@@ -58,4 +58,12 @@ RESEND_API_KEY=
 RESEND_FROM_EMAIL=noreply@yourdomain.com
 RESEND_TO_EMAIL=contact@yourdomain.com
 
+# Google Business Profile sync (server-only; see docs/google-business-profile-setup-guide.md)
+# Set GOOGLE_SYNC_ENABLED=true to enable syncing opening hours and closings to GBP.
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REFRESH_TOKEN=
+GOOGLE_LOCATION_NAME=
+GOOGLE_SYNC_ENABLED=
+
 SITE_PHONE=
