feat: add indexnow capability

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,11 @@ GOOGLE_SITE_VERIFICATION=your_google_verification_code
 YANDEX_VERIFICATION=your_yandex_verification_code
 YAHOO_VERIFICATION=your_yahoo_verification_code
 
+# IndexNow (Bing, Yandex, Edge) – key must match filename public/{INDEXNOW_KEY}.txt
+INDEXNOW_KEY=dariuspizza2026
+# Optional: require ?secret=... when calling POST /api/indexnow
+# INDEXNOW_SUBMIT_SECRET=your-secret
+
 # Resend Email Configuration
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=noreply@yourdomain.com
