--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:og:de": "node scripts/test-og.js http://localhost:3000/de",
     "test:og:it": "node scripts/test-og.js http://localhost:3000/it",
     "test:og:es": "node scripts/test-og.js http://localhost:3000/es",
+    "indexnow:submit": "node scripts/submit-indexnow.js",
     "test:e2e:ui": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --ui",
     "test:e2e:headed": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --headed",
     "test:e2e:debug": "node -e \"process.exit(process.env.CI?0:1)\" || playwright test --debug",
